// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PricingPlans > renders with as correctly 1`] = `
"<section data-orientation="horizontal" class="flex flex-col gap-y-8 lg:grid lg:grid-cols-[repeat(var(--count),minmax(0,1fr))] gap-x-8" style="--count: 3;">
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Basic</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$10</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Pro</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$20</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Enterprise</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$30</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PricingPlans > renders with class correctly 1`] = `
"<div data-orientation="horizontal" class="flex flex-col lg:grid lg:grid-cols-[repeat(var(--count),minmax(0,1fr))] gap-x-8 gap-y-12" style="--count: 3;">
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Basic</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$10</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Pro</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$20</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Enterprise</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$30</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PricingPlans > renders with compact and scale correctly 1`] = `
"<div data-orientation="horizontal" class="flex flex-col gap-y-8 lg:grid lg:grid-cols-[repeat(var(--count),minmax(0,1fr))]" style="--count: 3;">
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Basic</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$10</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Pro</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$20</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Enterprise</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$30</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PricingPlans > renders with compact correctly 1`] = `
"<div data-orientation="horizontal" class="flex flex-col gap-y-8 lg:grid lg:grid-cols-[repeat(var(--count),minmax(0,1fr))]" style="--count: 3;">
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Basic</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$10</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Pro</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$20</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Enterprise</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$30</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PricingPlans > renders with default slot correctly 1`] = `"<div data-orientation="horizontal" class="flex flex-col gap-y-8 lg:grid lg:grid-cols-[repeat(var(--count),minmax(0,1fr))] gap-x-8" style="--count: 3;">Default slot</div>"`;

exports[`PricingPlans > renders with one plan correctly 1`] = `
"<div data-orientation="horizontal" class="flex flex-col gap-y-8 lg:grid lg:grid-cols-[repeat(var(--count),minmax(0,1fr))] gap-x-8" style="--count: 1;">
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Basic</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$10</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PricingPlans > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" class="flex flex-col gap-y-8 gap-x-8" style="--count: 3;">
  <!---->
  <div data-orientation="horizontal" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 grid-cols-1 lg:grid-cols-3 justify-between divide-y lg:divide-y-0 lg:divide-x divide-default bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0 lg:col-span-2 pb-6 lg:pb-0 lg:pr-6 justify-center">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Basic</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0 lg:grid lg:grid-cols-2 lg:mt-12">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <div data-slot="footer" class="flex flex-col gap-6 items-center lg:justify-center lg:items-center lg:p-6 lg:max-w-xs lg:w-full lg:mx-auto">
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$10</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div data-orientation="horizontal" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 grid-cols-1 lg:grid-cols-3 justify-between divide-y lg:divide-y-0 lg:divide-x divide-default bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0 lg:col-span-2 pb-6 lg:pb-0 lg:pr-6 justify-center">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Pro</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0 lg:grid lg:grid-cols-2 lg:mt-12">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <div data-slot="footer" class="flex flex-col gap-6 items-center lg:justify-center lg:items-center lg:p-6 lg:max-w-xs lg:w-full lg:mx-auto">
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$20</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div data-orientation="horizontal" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 grid-cols-1 lg:grid-cols-3 justify-between divide-y lg:divide-y-0 lg:divide-x divide-default bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0 lg:col-span-2 pb-6 lg:pb-0 lg:pr-6 justify-center">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Enterprise</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0 lg:grid lg:grid-cols-2 lg:mt-12">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <div data-slot="footer" class="flex flex-col gap-6 items-center lg:justify-center lg:items-center lg:p-6 lg:max-w-xs lg:w-full lg:mx-auto">
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$30</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`PricingPlans > renders with scale correctly 1`] = `
"<div data-orientation="horizontal" class="flex flex-col gap-y-8 lg:grid lg:grid-cols-[repeat(var(--count),minmax(0,1fr))] gap-x-8 lg:gap-x-13" style="--count: 3;">
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Basic</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$10</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Pro</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$20</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Enterprise</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$30</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PricingPlans > renders with three plans correctly 1`] = `
"<div data-orientation="horizontal" class="flex flex-col gap-y-8 lg:grid lg:grid-cols-[repeat(var(--count),minmax(0,1fr))] gap-x-8" style="--count: 3;">
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Basic</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$10</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Pro</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$20</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Enterprise</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$30</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PricingPlans > renders with two plans correctly 1`] = `
"<div data-orientation="horizontal" class="flex flex-col gap-y-8 lg:grid lg:grid-cols-[repeat(var(--count),minmax(0,1fr))] gap-x-8" style="--count: 2;">
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Basic</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$10</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!---->
  <div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
    <!--v-if-->
    <div data-slot="body" class="flex flex-col min-w-0">
      <div data-slot="titleWrapper" class="flex items-center gap-3">
        <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Pro</div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
        <!--v-if-->
        <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$20</div>
        <!--v-if-->
      </div>
      <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
        <li data-slot="feature" class="flex items-center gap-2 min-w-0"><span class="iconify i-lucide:circle-check size-5 shrink-0 text-primary" aria-hidden="true" data-slot="featureIcon"></span><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</div>"
`;
